--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,17 @@
-asgiref==3.8.1
-certifi==2024.12.14
-Django==5.1.4
-django-filter==24.3
-djangorestframework==3.15.2
-djangorestframework-simplejwt==5.3.1
-elastic-transport==8.17.0
-elasticsearch==8.17.0
-elasticsearch-dsl==8.17.1
-Markdown==3.7
-numpy==2.2.1
-pandas==2.2.3
-PyJWT==2.10.1
-python-dateutil==2.9.0.post0
-pytz==2024.2
-six==1.17.0
-sqlparse==0.5.3
-typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==2.3.0
+asgiref
+certifi
+Django
+django-filter
+djangorestframework
+djangorestframework-simplejwt
+elastic-transport
+elasticsearch
+elasticsearch-dsl
+Markdown
+pandas
+PyJWT
+python-dateutil.post0
+pytz
+sqlparse
+typing_extensions
+tzdata
