--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ elasticsearch-dsl==8.17.1
 Markdown==3.7
 numpy==2.2.1
 pandas==2.2.3
+psycopg2==2.9.10
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 pytz==2024.2
