--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 ELASTICSEARCH_URI=http://elastic:QGcYXqgaCMOqnxBrtJqZzXkh@el-capitan.liara.cloud:32020/
+DATABASE_URL=postgresql://root:dizrfuvDTzAZtO1hqfecWpJn@el-capitan.liara.cloud:32586/postgres
