--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 ELASTICSEARCH_URI=http://elastic:QGcYXqgaCMOqnxBrtJqZzXkh@el-capitan.liara.cloud:32020/
 DATABASE_URL=postgresql://root:dizrfuvDTzAZtO1hqfecWpJn@el-capitan.liara.cloud:32586/postgres
+DEBUG=False
+ALLOWED_HOSTS=localhost,127.0.0.1,https://api.legaldadik.ir,https://legaldadik.ir
