--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-ELASTICSEARCH_URI=http://elastic:QGcYXqgaCMOqnxBrtJqZzXkh@el-capitan.liara.cloud:32020/
+ELASTICSEARCH_URI=http://elastic:xQQqCDHZAmLTSS3rfd1hjenX@el-capitan.liara.cloud:32535/
 DATABASE_URL=postgresql://root:dizrfuvDTzAZtO1hqfecWpJn@el-capitan.liara.cloud:32586/postgres
-DEBUG=False
+DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1,api.legaldadik.ir,legaldadik.ir
