search engine updated

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-ELASTICSEARCH_URI=http://elastic:xQQqCDHZAmLTSS3rfd1hjenX@el-capitan.liara.cloud:32535/
+ELASTICSEARCH_URI=http://elastic:bICt93qHTWBCLotkbsSbi3fU@logan.liara.cloud:34932/
 DATABASE_URL=postgresql://root:5EQwGDmLHtRTkhs44rQzwWiw@logan.liara.cloud:34158/postgres
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1,api.legaldadik.ir,legaldadik.ir
